 - Replaced "RESTlet" by "Restlet" in all logos to match the actual project name.
 - Fixed bug in DomRepresentation's constructor for empty Documents. Reported by David Rauschenbach.
 - Fixed a potential classloader issue with Resin 3.0.19 servlet container. Reported by Denis Haskin.
 - Force sort order for list of representations set by the DirectoryResource.
 - Fixed issue with the "timeout" property (class HTTPUrlConnection) which is not defined in Java 1.4. Reported by Stephan Schmitt. 
 - Fixed bug with repeated patterns in URI templates. Reported by Vincent Lari.
 
[API changes]
 - Added Resource.getPreferredRepresentation() method as a shortcut to  
   getRepresentation(getPreferredVariant()).
 - Renamed org.restlet.util.Factory to Engine as it does more than just providing factory methods.
 
[Enhancements] 
 - Updated FreeMarker to version 2.3.9.
 
1.0 RC3 (2007-01-19)
[Bugs fixed]
 - Fixed bug with the uri parsing in the DirectoryResource class. The query part of the resource uri
   is removed before sending request to the file connector.
 - The content negotiation was throwing class cast exceptions when a resource was 
   returning simple Variant instance via getVariants().
 - Fixed potential NPE in HttpRequest due to autoboxing. Reported by Valdis Rigdon.
 - Fixed bug preventing the Jetty connector from returning error status representations.
 - Fixed bug in DomRepresentation when outputting an instance based on a XML representation.
 - Fixed bug in Jetty connector potentially trying to send a response twice. Reported by
   Diggory Briercliffe.
 - VirtualHost now always set the rootRef, even if the attached Restlet isn't an Application.
 - Fixed bug in HttpRequest constructor in case the path of the URI starts with "//". Reported by
   Vincent Lari.

[API changes]
 - Added ReferenceList.getWebRepresentation() method, using exsiting logic from Directory.
 - Deprecated Directory.getDirectoryVariants() method and added getIndexVariants() + 